feat: 아이템 획득 추가